# vn-stock-ai-hedgefund

./: .env.example  README.md  __init__.py  main.py  pyproject.toml
agents/: __init__.py  analysis_agent.py  backtest_agent.py  base_agent.py  data_agent.py  decision_team.py  orchestration.py  research_team.py  strategy_agent.py  tools.py
agents/analysts/: __init__.py  fundamental_analyst.py  news_analyst.py  sentiment_analyst.py  technical_analyst.py
agents/researchers/: __init__.py  research_team.py
agents/trading/: __init__.py  decision_team.py  portfolio_manager.py  risk_manager.py  trader.py
config/: settings.py
utils/: logging.py  model_factory.py  technical_analysis.py
